--- a/Lab7/app/src/main/AndroidManifest.xml
+++ b/Lab7/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="psy.fit.bstu.lab6">
+    package="psy.fit.bstu.lab7">
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light">
-        <activity android:name=".SigninActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ViewContactActivity" />
-        <activity android:name=".FormActivity" />
-        <activity android:name=".AuthActivity">
+        android:theme="@style/Theme.Design.NoActionBar">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
