--- a/Lab7/app/src/main/AndroidManifest.xml
+++ b/Lab7/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="psy.fit.bstu.lab7">
+    package="by.bstu.lab7">
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Design.Light">
+        <activity android:name="by.bstu.lab7.UserActivity"></activity>
+        <activity android:name="by.bstu.lab7.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
